--- a/Web/Source Code/ICP3/task1.html
+++ b/Web/Source Code/ICP3/task1.html
@@ -14,17 +14,17 @@
 <div class="">
     <div class="container" style="padding-top:300px;">
         <div class="row">
-            <div class="col-sm" style="padding-top: 50px">
+            <div class="col-md-3" style="padding-top: 50px">
                 <h1 class="text-center text-danger Csize"> To play</h1>
                 <p class="text-center Csize"> Choose Rock, Paper or Scissor!</p>
             </div>
-            <div class="col-sm">
+            <div class="col-md-3">
                 <img src="./images/Rock.png" id="Rock" onclick=Rock() alt="Rock" >
             </div>
-            <div class="col-sm">
+            <div class="col-md-3">
                 <img src="./images/Paper.png" id="Paper" onclick=Paper() alt="Paper" >
             </div>
-            <div class="col-sm">
+            <div class="col-md-3">
                 <img src="./images/Scissors.png" id="Scissor" onclick=Scissor() alt="Scissor" >
             </div>
         </div>
