--- a/Web/Source Code/ICP3/task1.html
+++ b/Web/Source Code/ICP3/task1.html
@@ -19,13 +19,13 @@
                 <p class="text-center Csize"> Choose Rock, Paper or Scissor!</p>
             </div>
             <div class="col-md-3">
-                <img src="./images/Rock.png" id="Rock" onclick=Rock() alt="Rock" >
+                <img src="./images/Rock.png" id="Rock" onclick=Rock(); alt="Rock" >
             </div>
             <div class="col-md-3">
-                <img src="./images/Paper.png" id="Paper" onclick=Paper() alt="Paper" >
+                <img src="./images/Paper.png" id="Paper" onclick=Paper(); alt="Paper" >
             </div>
             <div class="col-md-3">
-                <img src="./images/Scissors.png" id="Scissor" onclick=Scissor() alt="Scissor" >
+                <img src="./images/Scissors.png" id="Scissor" onclick=Scissor(); alt="Scissor" >
             </div>
         </div>
     </div>
